// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component should have custom inline styles 1`] = `
<DocumentFragment>
  <section
    class="loader"
    style="width: 200px; z-index: 1;"
  >
    <div
      class="loader-background"
    />
    <div
      class="loader-icon"
    />
  </section>
</DocumentFragment>
`;

exports[`Loader component should render 1`] = `
<DocumentFragment>
  <div
    class="loader"
  >
    <div
      class="loader-background"
    />
    <div
      class="loader-icon"
    />
  </div>
</DocumentFragment>
`;
